syntax = "proto3";

package test.common.upstream;

import "buf/validate/validate.proto";
import "test/extensions/load_balancing_policies/common/load_balancer_fuzz.proto";

message ZoneAwareLoadBalancerTestCase {
  test.common.upstream.LoadBalancerTestCase load_balancer_test_case = 1
      [(buf.validate.field).required = true];
  // This determines whether ZoneAwareLoadBalancerFuzzBase will generate a local priority set to
  // pass into Zone Aware constructor
  bool need_local_priority_set = 2;
  // This is used to determine the weights of each host - will wrap around if runs out of space
  bytes random_bytestring_for_weights = 3 [(buf.validate.field).bytes = {min_len: 1, max_len: 2048}];
}
